--- a/index.html
+++ b/index.html
@@ -28,6 +28,31 @@
         </div>
     </nav>
     <!----------------------------- sidebar ------------------->
+    <div class="sidebar">
+        <div class="shortcut-links">
+            <a href=""><img src="./images/home.png" alt=""><p>Home</p></a>
+            <a href=""><img src="./images/explore.png" alt=""><p>Explore</p></a>
+            <a href=""><img src="./images/subscriprion.png" alt=""><p>Subscription</p></a>
+            <a href=""><img src="./images/library.png" alt=""><p>Library</p></a>
+            <a href=""><img src="./images/history.png" alt=""><p>History</p></a>
+            <a href=""><img src="./images/playlist.png" alt=""><p>Playlist</p></a>
+            <a href=""><img src="./images/messages.png" alt=""><p>Messages</p></a>
+            <a href=""><img src="./images/show-more.png" alt=""><p>Show More</p></a>
+            <hr>
+        </div>
+        <div class="subscribed-list">
+            <h3>SUBSCRIBED</h3>
+            <a href=""><img src="./images/Jack.png" alt=""><p>Jack Nicholson</p></a>
+            <a href=""><img src="./images/simon.png" alt=""><p>Simon Baker</p></a>
+            <a href=""><img src="./images/tom.png" alt=""><p>Tom Hardy</p></a>
+            <a href=""><img src="./images/megan.png" alt=""><p>Megan Ryan</p></a>
+            <a href=""><img src="./images/cameron.png" alt=""><p>Cameron Diaz</p></a>
+        </div>
+    </div>
 
+    <!------------------------- main --------------------- -->
+
+    
+    <script src="./script.js"></script>
 </body>
 </html>
