main layout is added

--- a/index.html
+++ b/index.html
@@ -52,7 +52,102 @@
 
     <!------------------------- main --------------------- -->
 
-    
-    <script src="./script.js"></script>
-</body>
+    <div class="container">
+        <div class="banner">
+            <img src="./images/banner.png" alt="">
+        </div>
+        <div class="list-container">
+            <div class="vid-list">
+              <a href=""><img src="./images/thumbnail1.png" alt="" class="thumbnail"></a>
+                <div class="flex-div">
+                    <img src="./images/Jack.png" alt="">
+                    <div class="vid-info">
+                        <a href="">Best Channel to learn coding that help you to be a web developer </a>
+                        <p>Easy Tutorials</p>
+                        <p>15k Views &bull; 2 days</p>
+                    </div>
+                </div>
+            </div>
+            <div class="vid-list">
+              <a href=""><img src="./images/thumbnail2.png" alt="" class="thumbnail"></a>
+                <div class="flex-div">
+                    <img src="./images/Jack.png" alt="">
+                    <div class="vid-info">
+                        <a href="">Best Channel to learn coding that help you to be a web developer </a>
+                        <p>Easy Tutorials</p>
+                        <p>15k Views &bull; 2 days</p>
+                    </div>
+                </div>
+            </div>
+            <div class="vid-list">
+              <a href=""><img src="./images/thumbnail3.png" alt="" class="thumbnail"></a>
+                <div class="flex-div">
+                    <img src="./images/Jack.png" alt="">
+                    <div class="vid-info">
+                        <a href="">Best Channel to learn coding that help you to be a web developer </a>
+                        <p>Easy Tutorials</p>
+                        <p>15k Views &bull; 2 days</p>
+                    </div>
+                </div>
+            </div>
+            <div class="vid-list">
+              <a href=""><img src="./images/thumbnail4.png" alt="" class="thumbnail"></a>
+                <div class="flex-div">
+                    <img src="./images/Jack.png" alt="">
+                    <div class="vid-info">
+                        <a href="">Best Channel to learn coding that help you to be a web developer </a>
+                        <p>Easy Tutorials</p>
+                        <p>15k Views &bull; 2 days</p>
+                    </div>
+                </div>
+            </div>
+            <div class="vid-list">
+              <a href=""><img src="./images/thumbnail5.png" alt="" class="thumbnail"></a>
+                <div class="flex-div">
+                    <img src="./images/Jack.png" alt="">
+                    <div class="vid-info">
+                        <a href="">Best Channel to learn coding that help you to be a web developer </a>
+                        <p>Easy Tutorials</p>
+                        <p>15k Views &bull; 2 days</p>
+                    </div>
+                </div>
+            </div>
+            <div class="vid-list">
+              <a href=""><img src="./images/thumbnail6.png" alt="" class="thumbnail"></a>
+                <div class="flex-div">
+                    <img src="./images/Jack.png" alt="">
+                    <div class="vid-info">
+                        <a href="">Best Channel to learn coding that help you to be a web developer </a>
+                        <p>Easy Tutorials</p>
+                        <p>15k Views &bull; 2 days</p>
+                    </div>
+                </div>
+            </div>
+            <div class="vid-list">
+              <a href=""><img src="./images/thumbnail7.png" alt="" class="thumbnail"></a>
+                <div class="flex-div">
+                    <img src="./images/Jack.png" alt="">
+                    <div class="vid-info">
+                        <a href="">Best Channel to learn coding that help you to be a web developer </a>
+                        <p>Easy Tutorials</p>
+                        <p>15k Views &bull; 2 days</p>
+                    </div>
+                </div>
+            </div>
+            <div class="vid-list">
+              <a href=""><img src="./images/thumbnail8.png" alt="" class="thumbnail"></a>
+                <div class="flex-div">
+                    <img src="./images/Jack.png" alt="">
+                    <div class="vid-info">
+                        <a href="">Best Channel to learn coding that help you to be a web developer </a>
+                        <p>Easy Tutorials</p>
+                        <p>15k Views &bull; 2 days</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+        <script src="./script.js"></script>
+    </body>
 </html>
