--- a/index.html
+++ b/index.html
@@ -58,11 +58,11 @@
         </div>
         <div class="list-container">
             <div class="vid-list">
-              <a href=""><img src="./images/thumbnail1.png" alt="" class="thumbnail"></a>
+              <a href="play-video.html"><img src="./images/thumbnail1.png" alt="" class="thumbnail"></a>
                 <div class="flex-div">
                     <img src="./images/Jack.png" alt="">
                     <div class="vid-info">
-                        <a href="">Best Channel to learn coding that help you to be a web developer </a>
+                        <a href="play-video.html">Best Channel to learn coding that help you to be a web developer </a>
                         <p>Easy Tutorials</p>
                         <p>15k Views &bull; 2 days</p>
                     </div>
